fixed problem icon alignment

--- a/src/index.css
+++ b/src/index.css
@@ -15,12 +15,17 @@ body {
   justify-content: center;
 }
 
+@media (max-width: 350px) {
+.item-text {
+  font-size: 1rem;
+}
+}
+
 @media (max-width: 667px) {
   body {
   margin: 20px;
 }
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
@@ -52,13 +57,11 @@ code {
 }
 
 #accordionDetails {
-  color: rgb(75, 73, 73);
+  color: #4b4949;
   gap: 30px;
 }
 
 .StarIconBtn {
-  color: #f5f5f5;
-  background: #f5f5f5;
   display: flex; 
   align-items: center; 
   justify-content: flex-end;
@@ -72,7 +75,19 @@ code {
 
 .MuiTypography-root {
   display:flex;
-  height: 3em; 
   align-items: center;
+  margin-left: 8px;
 }
 
+.item-text {
+  font-size: 1.5rem;
+}
+
+.item-container {
+  display: flex;
+  align-items: center;
+  height: 4em; 
+}
+.icon {
+  margin-right: 8px;
+}
